# docs/swagger.yaml
@@ -18,6 +18,17 @@ definitions:
       userID:
         type: integer
     type: object
+  models.GetUserResponse:
+    properties:
+      age:
+        type: integer
+      email:
+        type: string
+      id:
+        type: integer
+      user_name:
+        type: string
+    type: object
   models.Photo:
     properties:
       caption:
@@ -258,21 +269,15 @@ paths:
       - application/json
       responses:
         "200":
-          description: Comment deleted successfully
+          description: OK
           schema:
-            type: message
+            $ref: '#/definitions/models.GetUserResponse'
         "401":
           description: Unauthorized
-          schema:
-            type: error
         "404":
-          description: Comment not found
-          schema:
-            type: error
+          description: Not Found
         "500":
           description: Internal Server Error
-          schema:
-            type: string
       security:
       - Bearer: []
       summary: Delete Comments
@@ -465,7 +470,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.GetUserResponse'
       security:
       - Bearer: []
       summary: User Login
@@ -487,9 +492,7 @@ paths:
         "200":
           description: OK
           schema:
-            items:
-              $ref: '#/definitions/models.User'
-            type: array
+            $ref: '#/definitions/models.GetUserResponse'
       security:
       - Bearer: []
       summary: Create new User
